web con estilos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <tr>
                         <td>Graba versiones del codigo.</td>
-                        <td>Hospeda repositorios y colabora en lineakddjjdbdjdjf.</td>
+                        <td>Hospeda repositorios y colabora en linea.</td>
                     </tr>
                 </tbody>
             </table>
